...
                            <connections>
                                <action selector="menuButtonTapped" destination="Z9Y-K9-B6g" id="Z9V-CJ-uA3"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
                        <outlet property="menuButton" destination="NKL-Qm-w7u" id="8Ej-AQ-lNu"/>
                        <outlet property="searchControl" destination="yzc-hw-7d0" id="WlB-Eu-DED"/>
                        <outlet property="tableView" destination="Iop-4K-baP" id="K4j-De-BgJ"/>
                        <segue destination="ErQ-Qt-ysb" kind="presentation" identifier="ShowOnboarding" modalPresentationStyle="fullScreen" modalTransitionStyle="crossDissolve" id="lYe-mU-qaO"/>
                        <segue destination="C7j-4k-3R7" kind="presentation" identifier="ShowNewPost" modalPresentationStyle="fullScreen" modalTransitionStyle="flipHorizontal" id="Jmu-hB-7UD"/>
                    </connections>
                </viewController>
...
                                <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                            </textView>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="How to Cook Pasta" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4NX-e7-Zv0">
                                <rect key="frame" x="20" y="108" width="374" height="30.5"/>
                                <accessibility key="accessibilityConfiguration" identifier="howToTitleLabel"/>
                                <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="22"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="By: DaChef716" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LJM-c1-Ybc">
                                <rect key="frame" x="20" y="146.5" width="87" height="17.5"/>
...
