...
                                            <action selector="pageControl:" destination="3FJ-SR-KoG" eventType="valueChanged" id="wTj-aC-lvt"/>
                                        </connections>
                                    </pageControl>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JCP-AU-pnV">
                                        <rect key="frame" x="0.0" y="18" width="374" height="36"/>
                                        <color key="backgroundColor" systemColor="systemBlueColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <accessibility key="accessibilityConfiguration" identifier="SignUpButton"/>
                                        <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="17"/>
                                        <state key="normal" title="Sign Up">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
                                        <connections>
                                            <segue destination="M6F-YD-2U2" kind="showDetail" identifier="GoToSignUp" id="X8X-Ge-Hco"/>
...
